--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			     <div class="tab-grids">
                     <div id="tab1" class="tab-grid">  
 		                      <div class="login-form">	
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>							
 							<li>
                                 <h4>Entrer Votre Numéro de téléphone</h4>
@@ -336,7 +336,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>							
 							<li>
                                 <h4>Enter your mobile number</h4>
@@ -441,7 +441,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							
 		                      <div class="login-form">
                                   <i class="icon fa fa-television inner-icon" aria-hidden="true"></i>
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
                             
 						<ol>	
                             <!--<li>
@@ -494,7 +494,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <i class="icon fa fa-lightbulb-o inner-icon" aria-hidden="true"></i>
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>							
 							<li>
                                   <h4>Entrer Votre Numéro de compteur</h4>
@@ -544,7 +544,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <i class="icon fa fa-connectdevelop inner-icon" aria-hidden="true"></i>
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>	
                             <!--<li>
                                 <div class="agileits-select">
@@ -608,7 +608,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<i class="icon fa fa-flask inner-icon" aria-hidden="true"></i>
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>	
                             <li>
 								<h4>Selectionner le Nombre de bouteilles que vous souhaitiez payer?</h4>
@@ -648,7 +648,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<i class="icon fa fa-tint inner-icon" aria-hidden="true"></i>
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>	
                             <!--<li>
                                 <div class="agileits-select">
@@ -693,7 +693,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<i class="icon fa fa-paper-plane inner-icon" aria-hidden="true"></i>
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>	
                             <li>
 								<h4>Entrer le type de compte mobile source?</h4>
@@ -762,7 +762,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<i class="icon fa fa-tint inner-icon" aria-hidden="true"></i>
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>	
                             <li>
                                 <div class="agileits-select">
@@ -798,7 +798,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<i class="icon fa fa-paper-plane inner-icon" aria-hidden="true"></i>
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
-						<form action="pay.html" method="post" id="signup">
+						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
 						<ol>	
                             <li>
 								<h4>Entrer le type de compte mobile source?</h4>
