--- a/index.html
+++ b/index.html
@@ -1103,9 +1103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				if (!upgradeDb.objectStoreNames.contains('commandes')) {
 				  var notesOS = upgradeDb.createObjectStore('commandes');
 				}
-			  });
-			  
-			  dbPromise.then(function(db) {
+			  }).then(function(db) {
 			  var tx = db.transaction('tarifs', 'readwrite');
 			  var tarifs = tx.objectStore('tarifs');
 			  let mins = [300,1001,5001,10001,20001,25001,30001,40001,50001,60001,80001,100001,150001,250001,500001,1000001,2000001,3000001,4000001];
