--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						company: element,
 						created: new Date().getTime()
 					};
-					tarifData.add(item);
+					tarifData.push(item);
 				}
 			  }
 			   
