--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					var tarifs = db.createObjectStore("tarifs");
 					var commandes = db.createObjectStore("commandes");
 					
-					for (var i in employeeData) {
+					for (var i in tarifData) {
 					   tarifs.add(tarifData[i]);
 					}
 				 }
