--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 
 				request.onupgradeneeded = function(event) {
 					var db = event.target.result;
-					var tarifs = db.createObjectStore("tarifs");
+					var tarifs = db.createObjectStore("tarifs", {autoIncrement:true});
 					var commandes = db.createObjectStore("commandes");
 					
 					for (var i in tarifData) {
