--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ol>							
 							<li>
                                   <h4>Entrer Votre Numéro de compteur</h4>
-								<input type="tel" id="tel" name="tel" pattern="\d{10}" placeholder="Numéro de compteur" required />
+								<input type="tel" id="tels" name="tel" pattern="\d{10}" placeholder="Numéro de compteur" required />
 								<p class="validation01">
 									<span class="invalid">SVP Entrer un Numéro de Compteur Valide</span>
 									<span class="valid">Valider!</span>
@@ -572,7 +572,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </li>-->
                             <li>
                                   <h4>Entrer Votre Numéro Client</h4>
-								<input type="tel" id="tel" name="tel" pattern="\d{10}" placeholder="Numéro Client" required />
+								<input type="tel" id="telss" name="tel" pattern="\d{10}" placeholder="Numéro Client" required />
 								<p class="validation01">
 									<span class="invalid">SVP Entrer un Numéro Client Valide</span>
 									<span class="valid">Valider!</span>
@@ -719,7 +719,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </li>
 							<li>
 							  <h4>Entrer Votre Numéro de tél associé au compte mobile source</h4>
-                              <input type="tel" id="tel" name="tel" pattern="\d{10}" placeholder="Numéro de Téléphone Source" required="required" />	
+                              <input type="tel" id="teld" name="tel" pattern="\d{10}" placeholder="Numéro de Téléphone Source" required="required" />	
 							  <p class="validation01">
 									<span class="invalid">SVP Entrer un Numéro de Téléphone Valide</span>
 									<span class="valid">Valider!</span>
@@ -739,7 +739,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </li>
 							<li>
 							  <h4>Entrer Votre Numéro de tél associé au compte mobile cible</h4>
-                              <input type="tel" id="tel" name="tel" pattern="\d{10}" placeholder="Numéro de Téléphone Cible" required="required" />
+                              <input type="tel" id="teld" name="tel" pattern="\d{10}" placeholder="Numéro de Téléphone Cible" required="required" />
 							  <p class="validation01">
 									<span class="invalid">SVP Entrer un Numéro de Téléphone Valide</span>
 									<span class="valid">Valider!</span>
