--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ol>							
 							<li>
                                 <h4>Entrer Votre Numéro de téléphone</h4>
-								<input type="tel" id="tel" name="tel"  pattern="\d{10}" placeholder="Numéro de Téléphone" required="required" onkeyup="alert('eree')"/>
+								<input type="tel" id="tel" name="tel"  pattern="\d{10}" placeholder="Numéro de Téléphone" required="required" onkeyup="filterFunction()"/>
 								<p class="validation01">
 									<span class="invalid">SVP Entrer un Numéro de Téléphone Valide</span>
 									<span class="valid">Valider!</span>
