--- a/index.html
+++ b/index.html
@@ -1146,10 +1146,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			})();
 			function filterFunction() {
 			  var input, filter;
+			  alert('test');
 			  input = document.getElementById("tel");
+			  alert(input.value);
 			  filter = input.value.substring(0, 2);
+			  alert(filter.value);
 			  div = document.getElementById("selectOpe");
+			  alert(div.value);
 			  opt = div.getElementsByTagName("option");
+			  alert(opt.length);
 			  if(filter.trim() !=""){
 			  for (i = 0; i < opt.length; i++) {
 				if(opt[i].value.localeCompare(filter) == 0){
