--- a/index.html
+++ b/index.html
@@ -1150,7 +1150,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  input = document.getElementById("tel");
 			  alert(input.value);
 			  filter = input.value.substring(0, 2);
-			  alert(filter.value);
+			  alert(filter);
 			  div = document.getElementById("selectOpe");
 			  alert(div.value);
 			  opt = div.getElementsByTagName("option");
