--- a/index.html
+++ b/index.html
@@ -1157,6 +1157,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			  alert(opt.length);
 			  if(filter.trim() !=""){
 			  for (i = 0; i < opt.length; i++) {
+				 alert(opt[i]);
+				  alert(opt[i].value.localeCompare(filter));
 				if(opt[i].value.localeCompare(filter) == 0){
 					opt[i].style.display = "";
 				}else {
