--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="agileits-select">
                                 <select class="selectpicker show-tick" id="selectOpe" data-live-search="true" required="required" >
                                   <option data-tokens="Select Operator">Opérateur</option>
-                                  <option data-tokens="07">Airtel</option>
-                                  <option data-tokens="06">Libertis</option>
+                                  <option data-tokens="Airtel" value="07">Airtel</option>
+                                  <option data-tokens="Libertis" value="06">Libertis</option>
                                   <!--<option data-tokens="Reliance GSM">Reliance GSM</option>
                                   <option data-tokens="Reliance CDMA">Reliance CDMA</option>
                                   <option data-tokens="Telenor">Telenor</option>
