--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         
                         <!-- tab3 -->
 				<div>
-                    <i class="icon fa fa-lightbulb-o inner-icon" aria-hidden="true"></i>
+                    <!--<i class="icon fa fa-lightbulb-o inner-icon" aria-hidden="true"></i>-->
                     <div id="tab2" class="tab-grid">
 		                      <div class="login-form">
 						<form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
