--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <!-- /tab2 -->
                         <!-- tab3 -->
                         <div>
+							<div class="login-form">
                                         <i class="icon fa fa-lightbulb-o inner-icon" aria-hidden="true"></i>
                                         <div id="tab2" class="tab-grid">
                                             <div class="login-form">
@@ -391,6 +392,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                                         </div>
                                     </div>
+								</div>
                         <!-- /tab3 -->
 
                         <!-- tab4 -->
