--- a/index.html
+++ b/index.html
@@ -358,37 +358,39 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                         <!-- /tab2 -->
                         <!-- tab3 -->
-<div>
-                            <div class="login-form">
-                                <i class="icon fa fa-television inner-icon" aria-hidden="true"></i>
-                                <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
+                        <div>
+							<div class="login-form">
+                                        <i class="icon fa fa-lightbulb-o inner-icon" aria-hidden="true"></i>
+                                        <div id="tab2" class="tab-grid">
+                                                <form action="https://utility-dev.github.io/pay.html" method="post" id="signup">
+                                                    <ol>
+                                                        <li>
+                                                            <h4>Entrer Votre Numéro de compteur</h4>
+                                                            <input type="tel" id="tels" name="tel" pattern="\d{10}" placeholder="Numéro de compteur" required />
+                                                            <p class="validation01">
+                                                                <span class="invalid">SVP Entrer un Numéro de Compteur Valide</span>
+                                                                <span class="valid">Valider!</span>
+                                                            </p>
+                                                        </li>
+                                                        <li>
+                                                            <div class="mobile-right ">
+                                                                <h4>Combien souhaitiez-vous payer?</h4>
+                                                                <div class="mobile-rchge">
+                                                                    <input type="text" placeholder="Montant" name="amount" required="required" />
+                                                                </div>
+                                                                <div class="clearfix"></div>
+                                                            </div>
+                                                        </li>
+                                                        <li>
+                                                            <input type="submit" class="submit" value="Recharger Maintenant" />
+                                                        </li>
+                                                    </ol>
+                                                </form>
 
-                                    <ol>
-                                        <li>
-                                            <h4>Entrer Votre Code</h4>
-                                            <input type="text" id="customer" value="Code" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Code';}" required="">
-                                            <p class="validation01">
-                                                <span class="invalid">SVP Entrer un Code Valide</span>
-                                                <span class="valid">Valider!</span>
-                                            </p>
-                                        </li>
-                                        <li>
-                                            <h4>Combien souhaitiez-vous payer?</h4>
-                                            <div class="mobile-right ">
-                                                <div class="mobile-rchge">
-                                                    <input type="text" placeholder="Montant" name="amount" required="required" />
-                                                </div>
-                                                <div class="clearfix"></div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <input type="submit" class="submit" value="Payer Maintenant" />
-                                        </li>
-                                    </ol>
-                                </form>
 
-                            </div>
-                        </div>
+                                        </div>
+                                    </div>
+								</div>
                         <!-- /tab3 -->
 
                         <!-- tab4 -->
