--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li>
                             <div class="banner1">
                                 <div class="caption">
-                                    <h3><span>Get a</span> coupon voucher on Mobile Recharge</h3>
-                                    <p><a href="#mobilew3layouts" class="scroll">Recharge now</a></p>
+                                    <h3><span>Economisez</span> 500 FCFA sur tous vos bouquet canal+</h3>
+                                    <p><a href="#mobilew3layouts" class="scroll">Reabonné vous maintenant</a></p>
                                 </div>
                             </div>
                         </li>
