--- a/index.html
+++ b/index.html
@@ -160,6 +160,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     </div>
                                                 </div>
                                             </form>
+											<form class="form-horizontal" action="#" method="get" style="display : none">
+												<div class="form-group">
+                                                    <label for="sendCode" class="col-sm-2 control-label">
+                                                        Code </label>
+                                                    <div class="col-sm-10">
+                                                        <input type="tel" class="form-control" id="sendCode" placeholder="Entrer le code reçu par sms" required="required" />
+                                                    </div>
+                                                </div>
+											</form>
                                         </div>
                                     </div>
                                     <div id="OR">
