--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="//fonts.googleapis.com/css?family=Oxygen:300,400,700&amp;subset=latin-ext" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
     <!-- /online fonts -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/sendCode.js"></script>
 
 </head>
 <!-- //head -->
