--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 </div>
                                             </form>
 											<div class="col-sm-10 w3ls-validRegisterForm">
-												<form class="form-horizontal" action="#" method="get" style="display : none">
+												<form class="form-horizontal" action="#" method="get">
 													<div class="form-group">
 														<label for="sendCode" class="col-sm-2 control-label">
 															Code </label>
