--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             </form>
                                         </div>
                                         <div class="tab-pane" id="Registration">
-                                            <form class="form-horizontal" action="#" method="get">
+                                            <form class="form-horizontal" action="#" method="get" style="display: none">
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
                                                         Name</label>
