--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <h3 class="other-nw">
                                             Se Connecter Avec</h3>
                                         </div>
-                                        <div class="col-md-12">
+                                        <!--<div class="col-md-12">
                                             <div class="btn-group btn-group-justified">
                                                 <a href="#" class="btn btn-primary">Facebook</a> <a href="#" class="btn btn-danger">
                                                 Google +</a>
                                             </div>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </div>
                             </div>
