--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											</div>
                                         </div>
                                     </div>
-                                    <div id="OR">
-                                        OU</div>
+                                    <!--<div id="OR">
+                                        OU</div>-->
                                 </div>
                                 <div class="col-md-4 extra-agileits">
                                     <div class="row text-center sign-with">
-                                        <div class="col-md-12">
+                                        <!--<div class="col-md-12">
                                             <h3 class="other-nw">
                                             Se Connecter Avec</h3>
                                         </div>
-                                        <!--<div class="col-md-12">
+                                        <div class="col-md-12">
                                             <div class="btn-group btn-group-justified">
                                                 <a href="#" class="btn btn-primary">Facebook</a> <a href="#" class="btn btn-danger">
                                                 Google +</a>
