--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </div>
                                 <div class="col-md-4 extra-agileits">
                                     <div class="row text-center sign-with">
-                                        <!--<div class="col-md-12">
-                                            <h3 class="other-nw">
-                                            Se Connecter Avec</h3>
-                                        </div>
                                         <div class="col-md-12">
+                                            <h3 class="other-nw">
+                                            Faites nous confiance votre connexion et votre inscription sont sécurisées</h3>
+                                        </div>
+                                        <!--<div class="col-md-12">
                                             <div class="btn-group btn-group-justified">
                                                 <a href="#" class="btn btn-primary">Facebook</a> <a href="#" class="btn btn-danger">
                                                 Google +</a>
