--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <div class="row text-center sign-with">
                                         <div class="col-md-12">
                                             <h3 class="other-nw">
-                                            Faites nous confiance votre connexion et votre inscription sont sécurisées</h3>
+                                            Suivez-nous sur </h3>
                                         </div>
-                                        <!--<div class="col-md-12">
+                                        <div class="col-md-12">
                                             <div class="btn-group btn-group-justified">
                                                 <a href="#" class="btn btn-primary">Facebook</a> <a href="#" class="btn btn-danger">
                                                 Google +</a>
                                             </div>
-                                        </div>-->
+                                        </div>
                                     </div>
                                 </div>
                             </div>
