--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											</div>
                                         </div>
                                     </div>
-                                    <!--<div id="OR">
-                                        OU</div>-->
+                                    <<div id="OR">
+                                        OU</div>
                                 </div>
                                 <div class="col-md-4 extra-agileits">
                                     <div class="row text-center sign-with">
