--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											</div>
                                         </div>
                                     </div>
-                                    <<div id="OR">
+                                    <div id="OR">
                                         OU</div>
                                 </div>
                                 <div class="col-md-4 extra-agileits">
