--- a/index.html
+++ b/index.html
@@ -171,10 +171,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 															<input type="tel" class="form-control" id="sendCode" placeholder="Entrer le code reçu par sms" required="required" />
 														</div>
 													</div>
-													<div class="col-sm-10">
+													<div class="col-sm-10" sty>
 														<button type="submit" class="submit1 btn btn-primary btn-sm"> Valider</button>
 													</div>
-													<div id="success"></div>
+													<div class="col-sm-10">
+													    <h3 class="other-nw">
+													    Féliciations votre inscription est validée  </h3>
+													</div>
 												</form>
 											</div>
                                         </div>
