--- a/index.html
+++ b/index.html
@@ -174,9 +174,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<div class="col-sm-10" sty>
 														<button type="submit" class="submit1 btn btn-primary btn-sm"> Valider</button>
 													</div>
-													<div class="col-sm-10">
-													    <h3 class="other-nw">
-													    Féliciations votre inscription est validée  </h3>
+													<div id="success" class="col-sm-10">
+													    
 													</div>
 												</form>
 											</div>
