--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 														</div>
 													</div>
 													<div class="col-sm-10" sty>
-														<button type="submit" class="submit1 btn btn-primary btn-sm"> Valider</button>
+														<button type="submit" class="submit btn btn-primary btn-sm"> Valider</button>
 													</div>
 													<div id="success" class="col-sm-10">
 													    
