--- a/index.html
+++ b/index.html
@@ -171,14 +171,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 															<input type="tel" class="form-control" id="sendCode" placeholder="Entrer le code reçu par sms" required="required" />
 														</div>
 													</div>
-													<div class="col-sm-10" sty>
+													<div class="col-sm-10">
 														<button type="submit" class="submit btn btn-primary btn-sm"> Valider</button>
 													</div>
-													<div id="success" class="col-sm-10">
-													    
-													</div>
 												</form>
-											</div>
+												</div>
+												<div id="success" class="col-sm-10"></div>
                                         </div>
                                     </div>
                                     <div id="OR">
