--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                         </div>
                                     </div>
                                     <div id="OR">
-                                        OU</div>
+                                        ET</div>
                                 </div>
                                 <div class="col-md-4 extra-agileits">
                                     <div class="row text-center sign-with">
