--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             </form>
                                         </div>
                                         <div class="tab-pane" id="Registration">
-                                            <form class="form-horizontal" action="#" method="get" style="display: none">
+                                            <form class="form-horizontal" action="#" method="get">
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
                                                         Name</label>
@@ -162,7 +162,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     </div>
                                                 </div>
                                             </form>
-											<div class="col-sm-10 w3ls-validRegisterForm">
+											<div class="col-sm-10 w3ls-validRegisterForm" style="display: none">
 												<form class="form-horizontal" id="sendCodeForm" action="#" method="get">
 													<div class="form-group">
 														<label for="sendCode" class="col-sm-2 control-label">
