--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <form class="form-horizontal" action="#" method="get">
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
-                                                        Name</label>
+                                                        Nom</label>
                                                     <div class="col-sm-10">
                                                         <div class="row">
                                                             <div class="col-md-3 col-sm-3 col-xs-3">
@@ -132,14 +132,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
-                                                        Email</label>
+                                                        Prenom</label>
                                                     <div class="col-sm-10">
-                                                        <input type="email" class="form-control" id="email" placeholder="Email" required="required" />
+                                                        <input type="text" class="form-control" id="prenom" placeholder="Prénom" required="required" />
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="mobile" class="col-sm-2 control-label">
-                                                        Mobile</label>
+                                                        Tél</label>
                                                     <div class="col-sm-10">
                                                         <input type="tel" class="form-control" id="mobile" placeholder="Mobile" required="required" />
                                                     </div>
