--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     <div class="col-sm-10">
                                                         <div class="row">
                                                             <div class="col-md-3 col-sm-3 col-xs-3">
-                                                                <select class="form-control">
+                                                                <select class="form-control" id="gender">
                                                                     <option>Mr.</option>
                                                                     <option>Ms.</option>
                                                                     <option>Mrs.</option>
