--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                                 </select>
                                                             </div>
                                                             <div class="col-md-9 col-sm-9 col-xs-9">
-                                                                <input type="text" class="form-control" placeholder="Name" required="required" />
+                                                                <input type="text" class="form-control" id="nom" placeholder="Name" required="required" />
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
-                                                        Prenom</label>
+                                                        Prénom</label>
                                                     <div class="col-sm-10">
                                                         <input type="text" class="form-control" id="prenom" placeholder="Prénom" required="required" />
                                                     </div>
