--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 												</form>
 												</div>
 												<div id="success" class="col-sm-10"></div>
+												<div id="succes" class="col-sm-10"></div>
                                         </div>
                                     </div>
                                     <div id="OR">
