--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- /online fonts -->
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/sendCode.js"></script>
+    <script src="js/registration.js"></script>
 
 </head>
 <!-- //head -->
