--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             </form>
                                         </div>
                                         <div class="tab-pane" id="Registration">
-                                            <form class="form-horizontal" action="#" method="get">
+                                            <form class="form-horizontal w3ls-registrationForm" action="#" method="get">
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
                                                         Nom</label>
