--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 </div>
                                             </form>
                                         </div>
-                                        <div class="tab-pane" id="Registration">
-                                            <form class="form-horizontal w3ls-registrationForm" action="#" method="get">
+                                        <div class="tab-pane w3ls-registrationForm" id="Registration">
+                                            <form class="form-horizontal" action="#" method="get">
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
                                                         Nom</label>
@@ -163,6 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     </div>
                                                 </div>
                                             </form>
+											</div>
 											<div class="col-sm-10 w3ls-validRegisterForm" style="display: none">
 												<form class="form-horizontal" id="sendCodeForm" action="#" method="get">
 													<div class="form-group">
@@ -179,7 +180,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 												</div>
 												<div id="success" class="col-sm-10"></div>
 												<div id="succes" class="col-sm-10"></div>
-                                        </div>
                                     </div>
                                     <div id="OR">
                                         ET</div>
