--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 </div>
                                             </form>
 											</div>
-											<div class="col-sm-10 w3ls-validRegisterForm" style="display: none">
+											<div class="col-sm-10 w3ls-validRegisterForm">
 												<form class="form-horizontal" id="sendCodeForm" action="#" method="get">
 													<div class="form-group">
 														<label for="sendCode" class="col-sm-2 control-label">
@@ -892,7 +892,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
 
         (function() {
-
+	   $('#sendCodeForm').hide();
             //check for support
             if (!window.indexedDB) {
                 console.log('This browser doesn\'t support IndexedDB');
