--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                            <button type="button" class="close resetRegisterForm" data-dismiss="modal" aria-hidden="true">
                                 &times;</button>
                             <h4 class="modal-title" id="myModalLabel">
                             Utility</h4>
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="col-md-8 extra-w3layouts" style="border-right: 1px dotted #C2C2C2;padding-right: 30px;">
                                     <!-- Nav tabs -->
                                     <ul class="nav nav-tabs">
-                                        <li class="active"><a href="#Login" data-toggle="tab">Se Connecter</a></li>
+                                        <li class="active"><a href="#Login" data-toggle="tab" class="resetRegisterForm">Se Connecter</a></li>
                                         <li><a href="#Registration" data-toggle="tab">S'inscrire</a></li>
                                     </ul>
                                     <!-- Tab panes -->
