--- a/index.html
+++ b/index.html
@@ -894,7 +894,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	    jQuery(document).ready(function($) {//formRegistration
             $(".resetRegisterForm").click(function(event) {
 	      $('#Registration').removeClass("active");
-	      $('#Registration').trigger("reset");
+	      $("#Registration").removeAttr("style")
+	      $('#formRegistration').trigger("reset");
 	      $('#Registration').show();
 	      $('#sendCodeForm').hide();
 	      $('#success').empty();
