--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	      $('#Registration').removeClass("active");
 	      $("#Registration").removeAttr("style");
 	      $('#formRegistration').trigger("reset");
-	      $('#Registration').show();
+	      //$('#Registration').show();
 	      $('#sendCodeForm').hide();
 	      $('#success').empty();
               $('#succes').empty();
