--- a/index.html
+++ b/index.html
@@ -900,6 +900,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	      $('#sendCodeForm').hide();
 	      $('#success').empty();
               $('#succes').empty();
+	      $('#sendCodeForm').trigger("reset");
             });
         });
 
