--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h1><a href="index.html">Utility</a></h1>
             </div>
             <!--//logo-->
-            <div class="w3layouts-login">
-                <a data-toggle="modal" data-target="#myModal" href="#"><i class="glyphicon glyphicon-user"> </i>Se Connecter/S'inscrire</a>
+            <div class="w3layouts-login" id="w3layouts-login">
             </div>
             <div class="clearfix"></div>
             <!--Login modal-->
@@ -906,6 +905,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
         (function() {
 	   $('#sendCodeForm').hide();
+	    //check connexion 
+	    if("firstname" in sessionStorage){
+		$('#w3layouts-login').html("<a data-toggle='modal' data-target='#myModal' href='#'><i class='glyphicon glyphicon-user'> </i>".concat(sessionStorage.getItem("lastname"),"</a>"));    
+	    }else{
+		$('#w3layouts-login').html("<a data-toggle='modal' data-target='#myModal' href='#'><i class='glyphicon glyphicon-user'>Se Connecter/S'inscrire</i></a>");    
+	    }
             //check for support
             if (!window.indexedDB) {
                 console.log('This browser doesn\'t support IndexedDB');
