--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <!--//logo-->
             <div class="w3layouts-login">
-		<a data-toggle="modal" data-target="#myModal" href="#"><i id="w3layouts-login" class="glyphicon glyphicon-user"> </i>Se Connecter/S'inscrire</a>
+		<a data-toggle="modal" data-target="#myModal" href="#"><i id="w3layouts-login" class="glyphicon glyphicon-user"> </i></a>
             </div>
             <div class="clearfix"></div>
             <!--Login modal-->
@@ -908,9 +908,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	   $('#sendCodeForm').hide();
 	    //check connexion 
 	    if("firstname" in sessionStorage){
-		$('#w3layouts-login').html("<a data-toggle='modal' data-target='#myModal' href='#'><i class='glyphicon glyphicon-user'> </i>".concat(sessionStorage.getItem("lastname"),"</a>"));    
+		$('#w3layouts-login').after(sessionStorage.getItem("lastname"));    
 	    }else{
-		$('#w3layouts-login').html("<a data-toggle='modal' data-target='#myModal' href='#'><i class='glyphicon glyphicon-user'>Se Connecter/S'inscrire</i></a>");    
+		$('#w3layouts-login').after("Se Connecter/S'inscrire");    
 	    }
             //check for support
             if (!window.indexedDB) {
