--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h1><a href="index.html">Utility</a></h1>
             </div>
             <!--//logo-->
-            <div class="w3layouts-login" id= "w3layouts-login">
+            <div class="w3layouts-login" id= "w3layouts-login" style ="display : none">
 		<a data-toggle="modal" data-target="#myModal" href="#"><i class="glyphicon glyphicon-user"></i>Se Connecter/S'inscrire</a>
             </div>
             <div class="clearfix"></div>
