--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     </ul>
                                     <!-- Tab panes -->
                                     <div class="tab-content">
-                                        <div class="tab-pane active" id="Login">
+                                        <div class="tab-pane w3ls-connexionForm active" id="Login">
                                             <form class="form-horizontal" action="#" method="get">
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
-                                                        Email</label>
+                                                        Tel</label>
                                                     <div class="col-sm-10">
-                                                        <input type="email" class="form-control" id="email1" placeholder="Email" required="required" />
+                                                        <input type="text" class="form-control" id="tel" placeholder="+24174689936" required="required" />
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
@@ -111,6 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                         <a href="javascript:;" class="agileits-forgot">Mot de Passe Oublié?</a>
                                                     </div>
                                                 </div>
+												<div id="succesConnexion" class="col-sm-10"></div>
                                             </form>
                                         </div>
                                         <div class="tab-pane w3ls-registrationForm" id="Registration">
