--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/sendCode.js"></script>
     <script src="js/registration.js"></script>
+    <script src="js/connexion.js"></script>
 
 </head>
 <!-- //head -->
