--- a/index.html
+++ b/index.html
@@ -914,6 +914,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	    //check connexion 
 	    if("firstname" in sessionStorage){
 		//$('#w3layouts-login').hide(); 
+		 $("#w3layouts-loged").removeAttr("style");
 		$('#w3layouts-loged').html("<a data-toggle='modal' data-target='#myModal' href='#'><i class='glyphicon glyphicon-user'></i>".concat(sessionStorage.getItem("lastname"),"</a>"));    
 	    }else{
 		$('#w3layouts-login').removeAttr("style");    
