--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="w3layouts-login" id= "w3layouts-login" style ="display : none">
 		<a data-toggle="modal" data-target="#myModal" href="#"><i class="glyphicon glyphicon-user"></i>Se Connecter/S'inscrire</a>
             </div>
-	    <div class="w3layouts-loged" id= "w3layouts-loged" style ="display : none">
+	    <div class="w3layouts-login" id= "w3layouts-loged">
             </div>
             <div class="clearfix"></div>
             <!--Login modal-->
@@ -911,6 +911,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         (function() {
 	   $('#sendCodeForm').hide();
 	   $('#w3layouts-login').hide();
+	   $("#w3layouts-loged").hide();
 	    //check connexion 
 	    if("firstname" in sessionStorage){
 		//$('#w3layouts-login').hide(); 
