--- a/index.html
+++ b/index.html
@@ -907,6 +907,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	      $('#sendCodeForm').trigger("reset");
             });
         });
+	    
+	  jQuery(document).ready(function($) {
+            $("#deconnexion").click(function(event) {
+                sessionStorage.clear();
+   		$(location).attr('href','https://utility-dev.github.io/index.html');
+            });
+        });
+	jQuery(document).ready(function($) {
+            $("#compte").click(function(event) {
+   		$(location).attr('href','https://utility-dev.github.io/plans.html');
+            });
+        });
 
         (function() {
 	   $('#sendCodeForm').hide();
@@ -916,7 +928,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	    if("firstname" in sessionStorage){
 		//$('#w3layouts-login').hide(); 
 		 $("#w3layouts-loged").removeAttr("style");
-		$('#w3layouts-loged').html("<a data-toggle='modal'  href='#' style ='display: inline-block'><i class='glyphicon glyphicon-user'></i>".concat(sessionStorage.getItem("firstname"),"</a>","<a id='deconnexion' data-toggle='modal' href='#' style='display : inline-block'>Deconnexion</a>"));    
+		$('#w3layouts-loged').html("<a id='compte' data-toggle='modal'  href='#' style ='display: inline-block'><i class='glyphicon glyphicon-user'></i>".concat(sessionStorage.getItem("firstname"),"</a>","<a id='deconnexion' data-toggle='modal' href='#' style='display : inline-block'>Deconnexion</a>"));    
 	    }else{
 		$('#w3layouts-login').removeAttr("style");    
 	    }
