--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 													<div class="col-sm-10">
 														<button type="submit" class="submit btn btn-primary btn-sm"> Valider</button>
 													</div>
+													<div id="validSuccesConnexion" class="col-sm-10"></div>
 												</form>
 										    </div>											
                                         </div>
